# shared-lib-reload

./: CMakeLists.txt
app/: main.c
shared/: shared.c  shared.h
